# EventSnapAPI

./: README.md  docker-compose.example.yml  docker-compose.yml  trigger.sql
inference_api/: Dockerfile  README.md  app.py  detector.py  download_models.py  embedder.py  handler.py  requirements.txt  test_local_server.py
main_api/: Dockerfile  README.md  app.py  celery_app.py  config.py  database.py  main.py  pyproject.toml  requirements.txt  tasks.py  utils.py
main_api/application/ports/: inference.py  queue.py  repository.py  storage.py
main_api/application/use_cases/: attendees.py  background_tasks.py  events.py
main_api/domain/: exceptions.py  models.py
main_api/infrastructure/: di_container.py
main_api/infrastructure/database/: models.py  repository.py
main_api/infrastructure/inference/: hf_inference_service.py
main_api/infrastructure/queue/: celery_app.py  celery_service.py  celery_workers.py
main_api/infrastructure/storage/: minio_service.py
main_api/presentation/api/: main.py
main_api/presentation/api/routers/: attendees.py  events.py
main_api/routers/: attendees.py  events.py
storage_api/: README.md  config.py  create_test_zip.py  main.py  requirements.txt
