[project]
name = "main-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=12.3.0",
    "asyncpg>=0.29.0",
    "celery>=5.3.6",
    "dependency-injector>=4.41.0",
    "fastapi>=0.110.0",
    "gunicorn>=21.2.0",
    "httpx>=0.27.0",
    "pgvector>=0.2.5",
    "pika>=1.3.2",
    "pillow>=10.2.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.29",
    "tenacity>=8.2.3",
    "uvicorn>=0.29.0",
]
